@@ -6,8 +6,9 @@ Changes in libuca 0.5.0
 
 - Adapt cameras/ipe.c to support the current driver API
 
-- uca_cam_grab_callback()s have to return UCA_BUFFER_KEEP or UCA_BUFFER_RELEASE
-  now
+- API changes
+    - new enum type uca_buffer_status
+    - uca_cam_grab_callback()s have to return uca_buffer_status
 
 - New symbols:
     - uca_cam_release_buffer()
